# shard

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
.codex/: CODEX.md
.cursor/rules/: context.mdx
.github/workflows/: publish-to-stores.yml  release-publish-automation.yml  release.yml  store-publish.yml
desktop/: package.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/icons/shard.icon/: icon.json
desktop/src-tauri/src/: commands.rs  lib.rs
desktop/src/components/: AccountView.tsx  ContentItemRow.tsx  LibraryView.tsx  LogsView.tsx  Modal.tsx  ProfileView.tsx  SettingsView.tsx  Sidebar.tsx  SkinThumbnail.tsx  SkinViewer.tsx  StoreView.tsx
desktop/src/components/modals/: AddContentModal.tsx  CreateProfileModal.tsx  EditVersionModal.tsx  ProfileJsonModal.tsx  PurgeStorageModal.tsx  index.ts
desktop/src/lib/: player-model.ts
desktop/src/store/: index.ts
desktop/src/types/: index.ts
launcher/: Cargo.toml
launcher/src/: accounts.rs  auth.rs  config.rs  library.rs  main.rs  minecraft.rs  ops.rs  skin.rs
scripts/: capture-screenshots.sh  compile-liquid-glass-icon.sh  sync-version.mjs
src/: accounts.rs  auth.rs  config.rs  content_store.rs  instance.rs  lib.rs  main.rs  minecraft.rs  modpack.rs  paths.rs  profile.rs  store.rs  updates.rs  util.rs
ui/: index.html  package.json  playwright.config.ts
ui/src/: App.tsx  styles.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: commands.rs  lib.rs
ui/src/components/: AccountView.tsx  AccountsView.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  Field.tsx  LibraryView.tsx  LogsView.tsx  Modal.tsx  PlatformIcon.tsx  ProfileView.tsx  SettingsView.tsx  Sidebar.tsx  SkinViewer.tsx  StoreView.tsx  Toast.tsx  index.ts
ui/src/components/modals/: AccountDetailsModal.tsx  AddContentModal.tsx  CloneProfileModal.tsx  CreateProfileModal.tsx  DeviceCodeModal.tsx  DiffProfilesModal.tsx  EditVersionModal.tsx  LaunchPlanModal.tsx  ProfileJsonModal.tsx  index.ts
ui/src/hooks/: index.ts  useOnline.ts
ui/src/store/: index.ts
ui/src/types/: index.ts
ui/tests/: app.spec.ts
web/: next.config.mjs
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  sitemap.ts  twitter-image.tsx
web/app/docs/: docs.css
web/components/: JsonLd.tsx
web/components/launcher-hero/: LauncherPreview.tsx
web/content/: _meta.js  cli.mdx  faq.mdx  index.mdx
web/content/concepts/: _meta.js  content-store.mdx  profiles.mdx
web/content/getting-started/: index.mdx
web/public/: robots.txt
