[package]
name = "shard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
hex = "0.4.3"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha1 = "0.10.6"
sha2 = "0.10.9"
shell-words = "1.1.1"
zip = "7.0.0"
