[package]
name = "shard_ui"
version = "0.1.8"
description = "Shard launcher UI"
authors = ["you"]
edition = "2021"

[lib]
name = "shard_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tauri = { version = "2.5.1", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "~2.0.2"
tauri-plugin-opener = "~2.2.6"
tauri-plugin-updater = "~2.0.0"

shard = { path = "../../launcher" }
reqwest = { version = "0.12.28", features = ["blocking"] }
tauri-plugin-os = "2.3.2"
