[package]
name = "shard_ui"
version = "0.1.0"
description = "Shard launcher UI"
authors = ["you"]
edition = "2021"

[lib]
name = "shard_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tauri = { version = "2.5.1", features = ["macos-private-api"] }
tauri-plugin-dialog = "~2.0.2"
tauri-plugin-opener = "~2.2.6"

shard = { path = "../.." }

# Fast builds for development/testing (default)
# Use: cargo tauri dev (uses dev profile automatically)
[profile.dev]
opt-level = 0
debug = true
incremental = true

# Fast builds with some optimization for testing
# Use: cargo tauri build --profile dev-release
[profile.dev-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
incremental = true
debug = false

# Fully optimized builds for production
# Use: cargo tauri build --release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
